# raindropper

./: CLAUDE.md  README.md  install.sh  pyproject.toml  run
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: adopt.md  checkpoint.md  code-review.md  continue.md  deploy.md  features-gen.md  features-parallel.md  features-update.md  milestone.md  refresh.md  task-next.md  task-run-all.md  task-start.md  tasks-gen.md  tasks-update.md
.claude/projects/-Users-pitosalas-mydev-raindropper/memory/: MEMORY.md
.j2/: current.md  rules.md  runner.py  state.md
.j2/config/: settings.ros2.yaml  settings.yaml  workflow.yaml
.j2/features/: features.md
.j2/specs/: spec.md
.j2/tasks/: F03.md  F17.md  F18.md  F22.md  README.md
.j2/tasks/done/: F01.md  F02.md  F03.md  F04.md  F05.md  F06.md  F07.md  F08.md  F09.md  F10.md  F11.md  F12.md  F13.md
.j2/templates/: adopt.md  checkpoint.md  code_review.md  deploy.md  features_parallel.md  gen_features.md  gen_features.ros2.md  gen_tasks.md  gen_tasks.ros2.md  milestone.md  next_task.md  refresh.md  run_all_tasks.md  start_task.md  update_features.md  update_tasks.md
raindropper/: actions.py  client.py  main.py  selection_set.py
samples/: calc.md  hello_world.md  ros2_sensor_node.md  todo_cli.md  weather_api.md
tests/: test_actions.py  test_assign_bookmarks.py  test_assign_bookmarks_by_keywords.py  test_client.py  test_lint.py  test_menu.py  test_selection_set.py
